Issue #45 - removes padding from button, adds vertical align for that - adds vertical align middle to button icon

--- a/docs/css/src/button.css
+++ b/docs/css/src/button.css
@@ -37,6 +37,7 @@
 
 .button-hero .icon-middle{
   transform: rotate(-90deg);
+  vertical-align: middle;
 }
 
 .button-hero:hover .icon-middle{
@@ -44,13 +45,13 @@
 }
 
 .button-hero {
-  border-radius: 10px;
-  padding: 12px 20px 10px 23px;
+  border-radius: 10px;  
   font-size: 2em;
   background-color: var(--color-second);
   color: var(--color-first);
   font-weight: 200;
   width: 250px;
+  vertical-align: middle;
 }
 
 .button-hero:hover {
